# cathedral

./: CMakeLists.txt  readme.md  run.sh
include/core/: circuit.h
include/gui/: component_item.h  main_window.h  wire_item.h
include/util/: logging.h
src/: main.cpp
src/core/: circuit.cpp
src/gui/: component_item.cpp  main_window.cpp  wire_item.cpp
src/util/: logging.cpp
